some destructor code and optimisation stuff
added support for destructor code and updated Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,8 +4,25 @@
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted per Mozilla Public License v2.0.
 #
-all:
-	g++ -o itv -Os *.cpp
-	strip -s itv
+CFLAGS=-Wall -Werror -g -ansi -pedantic -std=c89
+CCFLAGS=-Wall -Werror -g
+LDFLAGS=-g -Wall -lstdc++
+
+OBJS=itv.o itv_ascii.o itv_table.o itv_words.o main.o
+PROG=itv
+
+all: $(PROG)
+default: all
+
+%.o: %.cpp
+	$(CC) $(CCFLAGS) -c $<
+
+%.o: %.c
+	$(CC) $(CFLAGS) -c $<
+
+$(PROG): $(OBJS)
+	$(CC) $(OBJS) $(LDFLAGS) -o $@
+
 clean:
-	rm -fr itv
+	rm -f $(OBJS)
+	rm -f $(PROG)
