make utility methods non-static

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,14 +8,14 @@ CFLAGS=-Wall -Werror -g -ansi -pedantic -std=c89
 CCFLAGS=-Wall -Werror -g -std=c++11
 LDFLAGS=-g -Wall -lstdc++ -lz
 
-OBJS=itv.o itv_ascii.o itv_table.o itv_words.o itv_wrapper.o main.o
+OBJS=itv.o itv_ascii.o itv_table.o itv_words.o itv_wrapper.o main.o itv_utils.o
 PROG=itv
 
 all: $(PROG)
 default: all
 
 wrapper:
-	$(CC) $(CCFLAGS) -c itv.cpp itv_ascii.cpp itv_table.cpp itv_words.cpp itv_wrapper.cpp
+	$(CC) $(CCFLAGS) -c itv.cpp itv_ascii.cpp itv_table.cpp itv_words.cpp itv_wrapper.cpp itv_utils.cpp
 	$(CC) $(CFLAGS) -c main.c
 	$(CC) $(OBJS) $(LDFLAGS) -o itv
 
