--- a/src/Makefile
+++ b/src/Makefile
@@ -6,10 +6,10 @@
 #
 CFLAGS=-Wall -Werror -g -fPIC -ansi -pedantic -std=c89
 CCFLAGS=-Wall -Werror -g -fPIC -std=c++11
-LDFLAGS=-g -Wall -lstdc++ -lz -shared
+LDFLAGS=-g -Wall -lstdc++ -shared
 
 #OBJS=itv.o itv_ascii.o itv_table.o itv_words.o itv_wrapper.o itv_utils.o
-OBJS=itv.o itv_table.o itv_characters.o itv_utils.o
+OBJS=itv.o itv_table.o itv_characters.o itv_utils.o itv_wrapper.o
 PROG=libitv.so
 
 PREFIX=/usr
@@ -20,7 +20,7 @@ all: $(PROG)
 default: all
 
 wrapper:
-	$(CC) $(CCFLAGS) -c itv.cpp itv_table.cpp itv_characters.cpp itv_utils.cpp
+	$(CC) $(CCFLAGS) -c itv.cpp itv_table.cpp itv_characters.cpp itv_utils.cpp itv_wrapper.cpp
 	$(CC) $(OBJS) $(LDFLAGS) -o $(PROG)
 
 %.o: %.cpp
